--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "replicated-lint",
     "author": "Replicated, Inc.",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "engines": {
         "node": ">=4.3.2"
     },
@@ -28,10 +28,14 @@
         "test": "rm -rf ./dist && tslint --project ./tsconfig.json && tsc -p . && mocha -r ts-node/register ./src/test/*.ts",
         "cover": "rm -rf ./dist && tslint --project ./tsconfig.json && tsc -p . && istanbul cover _mocha -- ./dist/test/*.js",
         "cover-xml": "rm -rf ./dist && tslint --project ./tsconfig.json && tsc -p . && istanbul cover _mocha -- -R mocha-junit-reporter ./dist/test/*.js",
-        "mintest": "tslint --project ./tsconfig.json && mocha --recursive -R 'min'  -r ts-node/register src/**/*.ts",
+        "mintest": "tslint --project ./tsconfig.json && mocha --recursive -R 'min'  -r ts-node/register src/test/*.ts",
         "tdd": "./tdd",
+        "docs": "yarn run prepublish && /usr/bin/env node ./dist/bin/docs.js > ./docs/gen.md",
         "report-coverage": "codeclimate-test-reporter < ./coverage/lcov.info",
         "publish-if-version-changed": "publish"
+    },
+    "bin": {
+        "replicated-lint": "/usr/bin/env node ./dist/bin/print.js"
     },
     "devDependencies": {
         "@types/chai": "^3.4.34",
@@ -55,6 +59,8 @@
         "js-yaml": "^3.8.4",
         "line-column": "^1.0.2",
         "lodash": "^4.17.4",
+        "pad": "^1.1.0",
+        "semver": "^5.3.0",
         "yaml-ast-parser": "^0.0.33"
     }
 }
