--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "replicated-lint",
     "author": "Replicated, Inc.",
-    "version": "0.3.2",
+    "version": "0.4.0",
     "engines": {
         "node": ">=4.3.2"
     },
@@ -31,11 +31,12 @@
         "mintest": "tslint --project ./tsconfig.json && mocha --recursive -R 'min'  -r ts-node/register src/test/*.ts",
         "tdd": "./tdd",
         "docs": "yarn run prepublish && /usr/bin/env node ./dist/bin/docs.js > ./docs/gen.md",
+        "lint": "yarn run prepublish && /usr/bin/env node ./dist/bin/stdin.js",
         "report-coverage": "codeclimate-test-reporter < ./coverage/lcov.info",
         "publish-if-version-changed": "publish"
     },
     "bin": {
-        "replicated-lint": "/usr/bin/env node ./dist/bin/print.js"
+        "replicated-lint": "./dist/bin/stdin.js"
     },
     "devDependencies": {
         "@types/chai": "^3.4.34",
@@ -55,6 +56,7 @@
     },
     "dependencies": {
         "@types/js-yaml": "^3.5.31",
+        "chalk": "^1.1.3",
         "gaze-run-interrupt": "^1.0.1",
         "js-yaml": "^3.8.4",
         "line-column": "^1.0.2",
