--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "replicated-lint",
     "author": "Replicated, Inc.",
-    "version": "0.5.0",
+    "version": "0.6.0",
     "engines": {
         "node": ">=4.3.2"
     },
@@ -32,22 +32,26 @@
         "mintest": "yarn run tslint && mocha --recursive -R 'min'  -r ts-node/register src/test/*.ts",
         "tdd": "./tdd",
         "tslint": "tslint --project ./tsconfig.json --exclude 'src/test/**/*'",
+        "tslintfix": "tslint --project ./tsconfig.json --fix",
         "docs": "yarn run prepublish && /usr/bin/env node ./dist/bin/docs.js > ./docs/gen.md",
         "lint": "yarn run prepublish && /usr/bin/env node ./dist/bin/stdin.js",
         "report-coverage": "codeclimate-test-reporter < ./coverage/lcov.info",
         "gen-schemas": "rm -rf ./dist && ./node_modules/.bin/typescript-json-schema ./tsconfig.json ReplicatedApp --ignoreErrors --out ./src/schemas/replicated.json --required true",
+        "schema-to-ts": "echo -n 'export default ' > ./src/schemas/parsed.ts && cat ./src/schemas/replicated.json >> ./src/schemas/parsed.ts && yarn run tslintfix",
         "publish-if-version-changed": "publish"
     },
     "bin": {
-        "replicated-lint": "./dist/bin/stdin.js"
+        "replicated-lint": "/usr/bin/env node ./dist/bin/stdin.js"
     },
     "devDependencies": {
         "@types/chai": "^3.4.34",
+        "@types/js-yaml": "^3.5.31",
         "@types/lodash": "^4.14.52",
         "@types/node": "^7.0.0",
         "chai": "^3.5.0",
         "codeclimate-test-reporter": "^0.4.1",
         "coveralls": "^2.13.0",
+        "gaze-run-interrupt": "^1.0.1",
         "istanbul": "^0.4.5",
         "mocha": "^3.2.0",
         "mocha-junit-reporter": "^1.13.0",
@@ -56,17 +60,17 @@
         "tslint": "^4.3.1",
         "typemoq": "^1.4.1",
         "typescript": "^2.2.2",
-        "typescript-json-schema":"^0.16.0"
+        "typescript-json-schema": "^0.16.0"
     },
     "dependencies": {
-        "@types/js-yaml": "^3.5.31",
+        "@types/tv4": "^1.2.28",
         "chalk": "^1.1.3",
-        "gaze-run-interrupt": "^1.0.1",
         "js-yaml": "^3.8.4",
         "line-column": "^1.0.2",
         "lodash": "^4.17.4",
         "pad": "^1.1.0",
         "semver": "^5.3.0",
+        "tv4": "^1.3.0",
         "yaml-ast-parser": "^0.0.33"
     }
 }
