--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "replicated-lint",
     "author": "Replicated, Inc.",
-    "version": "0.6.16",
+    "version": "0.6.17",
     "engines": {
         "node": ">=4.3.2"
     },
@@ -71,6 +71,7 @@
         "pad": "^1.1.0",
         "semver": "^5.3.0",
         "tv4": "^1.3.0",
+        "url-parse": "^1.1.9",
         "yaml-ast-parser": "^0.0.33"
     }
 }
