Added use of backup.hidden to test yml files correct-native has hidden: true, correct-kubernetes has hidden: "true" to test both types

--- a/docs/yamls/correct-kubernetes.yml
+++ b/docs/yamls/correct-kubernetes.yml
@@ -23,7 +23,8 @@ properties:
   logo_url: http://logonoid.com/images/batman-logo.png
   console_title: QA Application - Bravo Console
 backup:
-  enabled: true
+  enabled: "true"
+  hidden: "false"
   kubernetes:
     pvc_names: [ "redis-pvc" ]
 
