--- a/docs/yamls/correct-native.yml
+++ b/docs/yamls/correct-native.yml
@@ -28,6 +28,7 @@ properties:
 
 backup:
   enabled: true 
+  hidden: false
 
 ###########################################################
 # Ready State Command
