--- a/package.json
+++ b/package.json
@@ -1,77 +1,77 @@
 {
-    "name": "replicated-lint",
-    "author": "Replicated, Inc.",
-    "version": "0.6.37",
-    "engines": {
-        "node": ">=4.3.2"
-    },
-    "license": "MIT",
-    "repository": "https://github.com/replicatedhq/replicated-lint.git",
-    "bugs": {
-        "url": "https://github.com/replicatedhq/replicated-lint/issues"
-    },
-    "description": "Yaml Linting Tools for Replicated yaml",
-    "keywords": [
-        "yaml",
-        "rules",
-        "lint",
-        "replicated",
-        "studio"
-    ],
-    "main": "dist/index.js",
-    "typings": "dist/index",
-    "files": [
-        "dist/"
-    ],
-    "scripts": {
-        "fmt": "tsfmt -r",
-        "prepublish": "rm -rf ./dist && yarn run tslint && tsc -p .",
-        "test": "rm -rf ./dist && yarn run tslint && tsc -p . && mocha -r ts-node/register ./src/test/*.ts",
-        "cover": "rm -rf ./dist && yarn run tslint && tsc -p . && istanbul cover _mocha -- ./dist/test/*.js",
-        "cover-xml": "rm -rf ./dist && yarn run tslint && tsc -p . && istanbul cover _mocha -- -R mocha-junit-reporter ./dist/test/*.js",
-        "mintest": "yarn run tslint && mocha --recursive -R 'min'  -r ts-node/register src/test/*.ts",
-        "tdd": "./tdd",
-        "tslint": "tslint --project ./tsconfig.json --exclude 'src/test/**/*'",
-        "tslintfix": "tslint --project ./tsconfig.json --fix",
-        "docs": "yarn run prepublish && /usr/bin/env node ./dist/bin/docs.js > ./docs/gen.md",
-        "lint": "yarn run prepublish && /usr/bin/env node ./dist/bin/stdin.js",
-        "report-coverage": "codeclimate-test-reporter < ./coverage/lcov.info",
-        "gen-schemas": "rm -rf ./dist && ./node_modules/.bin/typescript-json-schema ./tsconfig.json ReplicatedApp --ignoreErrors --out ./src/schemas/replicated.json --required true",
-        "schema-to-ts": "echo -n 'export default ' > ./src/schemas/parsed.ts && cat ./src/schemas/replicated.json >> ./src/schemas/parsed.ts && yarn run tslintfix",
-        "publish-if-version-changed": "publish"
-    },
-    "bin": {
-        "replicated-lint": "/usr/bin/env node ./dist/bin/stdin.js"
-    },
-    "devDependencies": {
-        "@types/chai": "^3.4.34",
-        "@types/js-yaml": "^3.5.31",
-        "@types/lodash": "^4.14.52",
-        "@types/node": "^7.0.0",
-        "chai": "^3.5.0",
-        "codeclimate-test-reporter": "^0.4.1",
-        "coveralls": "^2.13.0",
-        "gaze-run-interrupt": "^1.0.1",
-        "istanbul": "^0.4.5",
-        "mocha": "^3.2.0",
-        "mocha-junit-reporter": "^1.13.0",
-        "publish": "^0.6.0",
-        "ts-node": "^3.0.6",
-        "tslint": "^4.3.1",
-        "typemoq": "^1.4.1",
-        "typescript": "^2.2.2",
-        "typescript-json-schema": "^0.16.0"
-    },
-    "dependencies": {
-        "@types/tv4": "^1.2.28",
-        "chalk": "^1.1.3",
-        "js-yaml": "^3.8.4",
-        "line-column": "^1.0.2",
-        "lodash": "^4.17.4",
-        "pad": "^1.1.0",
-        "semver": "^5.3.0",
-        "tv4": "^1.3.0",
-        "url-parse": "^1.1.9",
-        "yaml-ast-parser": "^0.0.33"
-    }
+  "name": "replicated-lint",
+  "author": "Replicated, Inc.",
+  "version": "0.6.38",
+  "engines": {
+    "node": ">=4.3.2"
+  },
+  "license": "MIT",
+  "repository": "https://github.com/replicatedhq/replicated-lint.git",
+  "bugs": {
+    "url": "https://github.com/replicatedhq/replicated-lint/issues"
+  },
+  "description": "Yaml Linting Tools for Replicated yaml",
+  "keywords": [
+    "yaml",
+    "rules",
+    "lint",
+    "replicated",
+    "studio"
+  ],
+  "main": "dist/index.js",
+  "typings": "dist/index",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "fmt": "tsfmt -r",
+    "prepublish": "rm -rf ./dist && yarn run tslint && tsc -p .",
+    "preinstall": "rm -rf ./dist && yarn run tslint && tsc -p .",
+    "test": "rm -rf ./dist && yarn run tslint && tsc -p . && mocha -r ts-node/register ./src/test/*.ts",
+    "cover": "rm -rf ./dist && yarn run tslint && tsc -p . && istanbul cover _mocha -- ./dist/test/*.js",
+    "cover-xml": "rm -rf ./dist && yarn run tslint && tsc -p . && istanbul cover _mocha -- -R mocha-junit-reporter ./dist/test/*.js",
+    "mintest": "yarn run tslint && mocha --recursive -R 'min'  -r ts-node/register src/test/*.ts",
+    "tdd": "./tdd",
+    "tslint": "tslint --project ./tsconfig.json --exclude 'src/test/**/*'",
+    "tslintfix": "tslint --project ./tsconfig.json --fix",
+    "docs": "yarn run prepublish && bin/replicated-lint docs gen > docs/gen.md",
+    "lint": "yarn run prepublish && /usr/bin/env node ./dist/bin/stdin.js",
+    "report-coverage": "codeclimate-test-reporter < ./coverage/lcov.info",
+    "gen-schemas": "rm -rf ./dist && ./node_modules/.bin/typescript-json-schema ./tsconfig.json ReplicatedApp --ignoreErrors --out ./src/schemas/replicated.json --required true",
+    "schema-to-ts": "echo -n 'export default ' > ./src/schemas/parsed.ts && cat ./src/schemas/replicated.json >> ./src/schemas/parsed.ts && yarn run tslintfix",
+    "publish-if-version-changed": "publish"
+  },
+  "bin": "bin/replicated-lint",
+  "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/js-yaml": "^3.5.31",
+    "@types/lodash": "^4.14.52",
+    "@types/node": "^7.0.0",
+    "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.4.1",
+    "coveralls": "^2.13.0",
+    "gaze-run-interrupt": "^1.0.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "mocha-junit-reporter": "^1.13.0",
+    "publish": "^0.6.0",
+    "ts-node": "^3.0.6",
+    "tslint": "^4.3.1",
+    "typemoq": "^1.4.1",
+    "typescript": "^2.2.2",
+    "typescript-json-schema": "^0.16.0"
+  },
+  "dependencies": {
+    "@types/tv4": "^1.2.28",
+    "chalk": "^1.1.3",
+    "js-yaml": "^3.8.4",
+    "line-column": "^1.0.2",
+    "lodash": "^4.17.4",
+    "pad": "^1.1.0",
+    "semver": "^5.3.0",
+    "tv4": "^1.3.0",
+    "url-parse": "^1.1.9",
+    "yaml-ast-parser": "^0.0.33",
+    "yargs": "^9.0.1"
+  }
 }
