--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "replicated-lint",
   "author": "Replicated, Inc.",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "engines": {
     "node": ">=4.3.2"
   },
@@ -21,7 +21,8 @@
   "main": "dist/index.js",
   "typings": "dist/index",
   "files": [
-    "dist/"
+    "dist/",
+    "bin/"
   ],
   "scripts": {
     "fmt": "tsfmt -r",
