--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "replicated-lint",
   "author": "Replicated, Inc.",
-  "version": "0.7.3",
+  "version": "0.8.0",
   "engines": {
     "node": ">=4.3.2"
   },
@@ -55,6 +55,8 @@
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0",
     "publish": "^0.6.0",
+    "strip-ansi": "^4.0.0",
+    "tmp": "^0.0.33",
     "ts-node": "^3.0.6",
     "tslint": "^5.7.0",
     "typemoq": "^1.4.1",
@@ -65,6 +67,7 @@
     "@types/tv4": "^1.2.28",
     "chalk": "^1.1.3",
     "js-yaml": "^3.8.4",
+    "junit-report-builder": "^1.2.0",
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
     "pad": "^1.1.0",
