--- a/projects/kubernetes/Makefile
+++ b/projects/kubernetes/Makefile
@@ -4,14 +4,14 @@ deps:
 	npm install -g replicated-lint
 
 verify-rules:
-	$(LINT) verify-rules --rules rules-no-latest.yaml
+	$(LINT) verify-rules --rules rules.yaml
 
 generate-docs:
-	$(LINT) docs gen --excludeDefaults --extraRules rules-no-latest.yaml > ./docs-generated.md
+	$(LINT) docs gen --excludeDefaults --extraRules rules.yaml > ./docs-generated.md
 
 validate-pod-good:
-	$(LINT) validate --infile pod-good.yaml --excludeDefaults --threshold warn --extraRules rules-no-latest.yaml
+	$(LINT) validate --infile pod-good.yaml --excludeDefaults --threshold warn --extraRules rules.yaml
 
 validate-pod-bad:
-	$(LINT) validate --infile pod-bad.yaml  --excludeDefaults --threshold warn --extraRules rules-no-latest.yaml
+	$(LINT) validate --infile pod-bad.yaml  --excludeDefaults --threshold warn --extraRules rules.yaml
 
