convert rules to info, add links

--- a/projects/replicated-supportbundle/rules.yaml
+++ b/projects/replicated-supportbundle/rules.yaml
@@ -1,7 +1,10 @@
 ---
-- name: spec-lifecycle-required
-  type: warn
-  message: No Lifecyle specified. Without a lifecycle, you will be unable to customize messaging for your end customer.
+- name: spec-lifecycle-tip
+  type: info
+  message: Did you know you can create custom, interactive workflows and messaging for your end customer by defining a lifecycle?
+  links: [
+    "https://help.replicated.com/api/support-bundle-yaml-lifecycle/root"
+  ]
   test:
     Falsey:
       path: lifecycle
@@ -27,3 +30,35 @@
                 contents: generating bundle...
             - generate: {}
 
+- name: spec-specs-tip
+  type: info
+  message: By adding a `specs` section, you can customize what kinds of diagnostic information is collected about your application.
+  links: [
+    "https://help.replicated.com/api/support-bundle-yaml-specs/shared"
+  ]
+  test:
+    Falsey:
+      path: specs
+  examples:
+    wrong:
+      - description: Spec has no `specs`
+        yaml: |
+          ---
+          lifecycle:
+            - message:
+                contents: "Collecting..."
+      - description: Spec `specs` is empty
+        yaml: |
+          ---
+          specs: []
+          lifecycle:
+            - message:
+                contents: "Collecting..."
+    right:
+      - description: Spec has a `specs` specified
+        yaml: |
+          ---
+          specs:
+            - os.read-file:
+                filepath: "/etc/hosts"
+                output_dir: /etc/hosts
