--- a/projects/replicated-ship/rules.yaml
+++ b/projects/replicated-ship/rules.yaml
@@ -44,3 +44,69 @@
                   contents: welcome to ship!
               - render:
                   skip_plan: true
+
+- name: assets-require-test-script
+  type: warn
+  message: assets require a `test` shell script
+  test:
+    AllOf:
+      path: assets.v1
+      pred:
+        Not:
+          pred:
+            Eq:
+              path: inline.dest
+              value: scripts/test.sh
+  examples:
+    wrong:
+      - description: Missing test script
+        yaml: |
+          ---
+          assets:
+            v1:
+              - inline:
+                  contents: echo "installing app"
+                  dest: scripts/install.sh
+    right:
+      - description: Includes a test script
+        yaml: |
+          ---
+          assets:
+            v1:
+              - inline:
+                  contents: echo "running tests"
+                  dest: scripts/test.sh
+
+- name: assets-require-install-script
+  type: warn
+  message: assets require a `install` shell script
+  test:
+    AllOf:
+      path: assets.v1
+      pred:
+        Not:
+          pred:
+            Eq:
+              path: inline.dest
+              value: scripts/install.sh
+  examples:
+    wrong:
+      - description: Missing install script
+        yaml: |
+          ---
+          assets:
+            v1:
+              - inline:
+                  contents: echo "running tests"
+                  dest: scripts/test.sh
+    right:
+      - description: Includes a install script
+        yaml: |
+          ---
+          assets:
+            v1:
+              - inline:
+                  contents: echo "running installs"
+                  dest: scripts/install.sh
+
+
