Update schema and add example to spec-good

--- a/projects/replicated-supportbundle/spec-good.yaml
+++ b/projects/replicated-supportbundle/spec-good.yaml
@@ -68,6 +68,7 @@ specs:
      filepath: /proc/cpuinfo
      description: "cpuinfo"
      output_dir: /os/proc/cpuinfo
+     include_empty: true
 
  - docker.service-logs:
      service: "my_service"
