add labels property to component.container
add to changelog, bump version

add container label to correct native yaml example

--- a/docs/yamls/correct-native.yml
+++ b/docs/yamls/correct-native.yml
@@ -186,6 +186,7 @@ components:
     ephemeral: true
     cmd: '["sleep", "10"]'
     name: "temp"
+    labels: ["com.replicated.excludelogs=true"]
     ports:
     - private_port: 80806
       public_port: 80805
