--- a/docs/yamls/correct-native.yml
+++ b/docs/yamls/correct-native.yml
@@ -27,8 +27,22 @@ properties:
 ###########################################################
 
 backup:
-  enabled: true 
+  enabled: true
   hidden: false
+
+###########################################################
+# Snapshots with multiple strategies
+###########################################################
+
+backup:
+  enabled: true
+  strategies:
+    - name: full_manual
+      manual: true
+      enabled: true
+    - name: full_scheduled
+      manual: false
+      enabled: true
 
 ###########################################################
 # Ready State Command
@@ -332,7 +346,7 @@ config:
   - name: phone_number
     type: text
     test_proc:
-      run_on_save: true    
+      run_on_save: true
       display_name: Is this a Phone Number?
       command: regex_match
       args:
@@ -726,4 +740,3 @@ custom_requirements:
         error: '{{repl .Error }}'
     condition:
       status_code: 0
-
