--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript-json-schema": "^0.16.0"
   },
   "dependencies": {
+    "@types/json-schema": "^6.0.1",
     "@types/tv4": "^1.2.28",
     "chalk": "^1.1.3",
     "js-yaml": "^3.8.4",
