--- a/docs/yamls/correct-swarm.yml
+++ b/docs/yamls/correct-swarm.yml
@@ -18,6 +18,7 @@ host_requirements:
   cpu_mhz: 1000
   memory: 2GB
   disk_space: 40GB
+  docker_space: 5GB
 
 properties:
   app_url: http://{{repl ConfigOption "hostname" }}
