--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,18 +15,21 @@ jobs:
           keys:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
+          name: we need this old version of yarn for some reason
+          command: sudo npm i -g yarn@0.27.5
+      - run:
           name: build
-          command: yarn install
+          command: $(npm -g bin)/yarn
       - save_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
       - run:
           name: coverage
-          command: yarn cover-xml
+          command: $(npm -g bin)/yarn cover-xml
       - run:
           name: report coverage
-          command: yarn report-coverage
+          command: $(npm -g bin)/yarn report-coverage
 
   deploy:
     working_directory: ~/repo
