--- a/docs/yamls/correct-kubernetes.yml
+++ b/docs/yamls/correct-kubernetes.yml
@@ -23,6 +23,12 @@ properties:
   app_url: http://{{repl IngressAddress "test-ingress" 80 }}
   logo_url: http://logonoid.com/images/batman-logo.png
   console_title: QA Application - Bravo Console
+terms:
+  markdown: |
+    # Terms
+
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non bibendum orci. Sed quis malesuada nisl, id congue ex. Nunc vestibulum eleifend tellus, vel facilisis odio aliquam non. Quisque ut est quis neque tempor feugiat...
+  version: 1
 backup:
   enabled: "true"
   hidden: "false"
